@@ -1,4 +1,7 @@
 # One Makefile to rule them all .. the babble now is in README
+#
+# This Works is placed under the terms of the Copyright Less License,
+# see file COPYRIGHT.CLL.  USE AT OWN RISK, ABSOLUTELY NO WARRANTY.
 
 # This actually is a meta-Makefile, a template for AWK to create a real Makefile.
 # It's a little bit like sendmail.cf, only far more limited.
@@ -52,22 +55,6 @@
 #	Warning!  You can do funny things like ##c## which first expands
 #	to #n# where n is the count of the part, thus selects all parts.
 #	However this are mainly sideeffects not to use!
-
-# Copyright (C)2004-2014 Valentin Hilbig, webmaster@scylla-charybdis.com
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 # Expand PROGS into single names
 #C
@@ -156,9 +143,9 @@ VERSIONNAME=$(VERSIONFILE)
 #C
 #C# Targets considered to work for all systems with GNU MAKE and GNU AWK
 
-all:	$(SUBDIRS) $(PROGS)
+all::	$(SUBDIRS) $(PROGS)
 
-test:	all Tests
+test::	all Tests
 	$(PWD)/tino/Makefile-tests.sh Tests
 
 #C
@@ -166,7 +153,7 @@ test:	all Tests
 #C#	ln -s tinolib/diet .
 #C#	make static
 #C# This is experimental.
-static:
+static::
 	[ -f diet.distignore~ ] || $(MAKE) clean
 	$(TOUCH) diet.distignore~
 	[ ! -d diet ] || $(MAKE) -C diet diet
@@ -204,7 +191,7 @@ $(VERSIONFILE).py:	VERSION
 #C
 #C# Poor man's install
 #C# Generated from PROGS and INSTALL* above
-install:
+install::
 #S PROGS
 #R	$(RM) "$(INSTALLPATH)/bin/$(PROG#c#)"
 #R	$(CP) "$(PROG#c#)" "$(INSTALLPATH)/bin/$(PROG#c#)"
@@ -225,17 +212,17 @@ install:
 # Makefile helping target, see tino/Makefile
 # In case you are in a subdirectory,
 # make this the first rule and let it cd up.
-it:	all
+it::	all
 	[ ".$(PWD)" != ".$(HERE)" ] || [ -f VERSION ] || \
 	{ UP="`dirname "$(HERE)"`"; $(MAKE) -C"$$UP" it HERE="$$UP"; }
 
-clean:
+clean::
 	$(RM) *.o *.d *~ .*~ */*~ $(CLEAN)
 	-$(MAKE) -C tino clean HERE="$(HERE)"
 #S SUBDIRS CLEANDIRS
 #R	-$(MAKE) -C #v# clean HERE="$(HERE)"
 
-distclean:	clean
+distclean::	clean
 	$(RM) "$(VERSIONFILE).h" $(PROGS) $(PROGS_EXE) $(DISTCLEAN)
 	$(RM) core core.* .#*
 	-$(MAKE) -C tino distclean HERE="$(HERE)"
@@ -248,13 +235,13 @@ distclean:	clean
 #C# Special targets in presence of tinolib
 #C# (subdirectory tino)
 
-dist:	distclean
+dist::	distclean
 	-$(MAKE) -C tino dist HERE="$(HERE)" DEBUGS="$(DBG_CFLAGS)$(DBG_LDFLAGS)$(DBG_LDLIBS)"
 
-tar:	distclean
+tar::	distclean
 	-$(MAKE) -C tino tar HERE="$(HERE)"
 
-diff:
+diff::
 	-$(MAKE) -C tino diff HERE="$(HERE)"
 
 #C
